saving map fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -207,6 +207,11 @@ html {
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     }
 
+.mini-map {
+    height: 400px;
+    align-items: center;
+
+}
 
 
 /* --------------------------------------- */
