--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,22 +50,22 @@ html {
 
 .sel_opt {
     font-size:15px;
-    font-family: georgia;
+    /* font-family: georgia; */
 }
 
 
 .set-panel{
     font-size:17px;
-    font-family: georgia;
+    /* font-family: georgia; */
 
 }
 
 .panel_font {
-    font-size:1vw;
+    font-size:12px;
     color:white;
     font-weight:bold;
     padding:1vw;
-    font-family:georgia;
+    /* font-family:georgia; */
     border-width:3px !important;
 }
 
@@ -73,9 +73,7 @@ html {
 
 .warm-stripes {
     font-size:large;
-    font-family: georgia;
-
-    
+    font-family: georgia;   
 
 }
 
@@ -205,7 +203,7 @@ html {
     }
 
 .mini-map {
-    height: 400px;
+    height: 300px;
     align-items: center;
     padding-top:10px;
 
@@ -279,6 +277,12 @@ a.button5{
         float: right;
    
    }
+
+   .panel_font {
+    font-size: 0.4vw;
+    }
+
+
 }
 
 
@@ -300,6 +304,11 @@ a.button5{
         width:100px;
    
    }
+
+   .panel_font {
+    font-size: 16px;
+    }
+
 }
 
 /* When your screen as more than 1210px */
@@ -309,10 +318,7 @@ a.button5{
         padding-left:60px;
     }
 
-   .panel_font {
-    font-size: 0.8vw;
-    padding:1vw!important;
-}
+
 
 .set-panel {    
     font-size:large;
@@ -338,6 +344,9 @@ a.button5{
    .set-panel {
         font-size:17px;
   }
+
+
+
 }
 
 
