--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
   <script src="/static/js/stripe_chart.js"></script>
 
     <!-- Build Pie Chart Chart-->
-    <script src="/static/js/pieChart.js"></script>
+    <script src="/static/js/pieLineChart.js"></script>
   
   
 </body>
