--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
     <!--row 2-->
     <div class="row row ml-5 mr-5 bc_color-w">
       <div class="col-xs-12 col-s-12 col-md-2  border border-dark border-right-0 border-top-0 col-color">      
-        <div class="mt-4 col-color set_mandp">
+        <div class="mt-4 col-color ">
           <h5 class= "sel_opt">Select A Country</h5>
           <select id="selDataset" class=" selDataset dropdown">
           </select>
