--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="col-xs-12 col-s-12 col-md-2 col-lg-2 col-xl-2 set-img-col">
         <div>
-           <a href="/" class="button5"><input class="w-100 img-set h-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button1.png" /></a>
+           <a href="/" id="button" class="button5"><input class="w-100 img-set h-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button1.png" /></a>
         </div>
       </div>       
     </div>
